# spartify

./: .gitignore  README.md  package.json  vite.config.js
.github/workflows/: release.yml
Casks/: spartify.rb
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: guest.html
src-tauri/binaries/: bore-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tunnel.rs
src-tauri/src/server/: mod.rs  routes.rs  ws.rs
src-tauri/src/spotify/: api.rs  auth.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/setup/: +page.svelte
website/: index.html
