[package]
name = "spartify"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spartify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP server (guest-facing web server embedded in the app)
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP client (Spotify Web API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Deep link (custom URI scheme for Spotify OAuth callback)
tauri-plugin-deep-link = "2"

# Shell / sidecar (for bundled bore binary)
tauri-plugin-shell = "2"

# Auto-updater (checks GitHub releases for new versions)
tauri-plugin-updater = "2"
url = "2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
anyhow = "1"
dirs = "5"
